<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_marginBottom="20sp"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        >
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="15dp"
            >
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_span="1"
                android:textSize="18sp"></TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/ET_email"
                android:layout_span="2"
                android:textSize="18sp"
                ></EditText>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="15dp"
            >
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="18sp"
                android:layout_span="1"></TextView>
            <EditText
                android:id="@+id/ET_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_span="2"
                android:textSize="18sp"></EditText>
        </TableRow>

    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/BT_login"
            android:text="@string/login">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/BT_quenMK"
            android:text="@string/forgetpass"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chưa có tài khoản?"
            android:textSize="16sp"></TextView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:id="@+id/BT_signup"></Button>

    </LinearLayout>
</LinearLayout>